# GitCommander

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PLUGIN_API.md
src/gitc/: __init__.py  __main__.py  app.py  context.py  registry.py
src/gitc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/gitc/plugins/: __init__.py  branch.py  file.py
tests/: test_gitc.py  test_qbranch_syntax.py  test_registry.py
